--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@shopify/polaris": "^4.13.0",
     "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.4.4",
+    "aws-serverless-express": "^3.3.8",
     "dotenv": "^8.2.0",
     "graphql": "^14.5.8",
     "isomorphic-fetch": "^2.1.1",
@@ -42,9 +43,12 @@
     "react": "^16.10.1",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.10.1",
+    "serverless-dotenv-plugin": "^2.4.2",
+    "serverless-webpack": "^5.3.2",
     "store-js": "^2.0.4"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.1",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-stage-3": "^7.0.0",
     "babel-jest": "25.2.4",
