--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "jest",
     "dev": "NODE_ENV=development nodemon ./server/index.js --watch ./server/index.js",
-    "build": "next build",
+    "build": "next build && babel server --out-dir dist --presets @babel/preset-env --ignore node_modules",
     "start": "NODE_ENV=production node ./server/index.js"
   },
   "repository": {
