独自ドメインで動くようにする

--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "nodemon": "^2.0.0",
     "prettier": "2.0.2",
     "react-addons-test-utils": "15.6.2",
-    "react-test-renderer": "16.13.1"
+    "react-test-renderer": "16.13.1",
+    "serverless-domain-manager": "^4.1.1"
   },
   "husky": {
     "hooks": {
