--- a/serverless.yml
+++ b/serverless.yml
@@ -13,7 +13,7 @@ provider:
     SHOPIFY_API_KEY: ${env:SHOPIFY_API_KEY}
     SHOPIFY_API_SECRET: ${env:SHOPIFY_API_SECRET}
     SCOPES: ${env:SCOPES}
-    SHOP: ${env:SHOP}
+    IN_LAMBDA: true
     NODE_ENV: production
 
 functions:
