--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ SHOPIFY_API_SECRET="YOUR_SHOPIFY_SECRET"
 HOST="YOUR_TUNNEL_URL"
 SHOP="my-shop-name.myshopify.com"
 SCOPES=read_products
+DOMAIN_NAME=
+
