--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Shopify's node app for CLI tool",
   "scripts": {
     "test": "jest",
-    "dev": "NODE_ENV=development nodemon ./server/index.js --watch ./server/index.js",
+    "dev": "NODE_ENV=development nodemon",
     "build": "next build && babel server --out-dir dist --presets @babel/preset-env --ignore node_modules",
     "start": "NODE_ENV=production node ./server/index.js"
   },
@@ -51,6 +51,13 @@
     "@babel/cli": "^7.10.1",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-stage-3": "^7.0.0",
+    "@types/js-cookie": "^2.2.6",
+    "@types/koa": "^2.11.3",
+    "@types/koa-router": "^7.4.1",
+    "@types/koa-session": "^5.10.2",
+    "@types/node": "^14.0.9",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "babel-jest": "25.2.4",
     "babel-register": "^6.26.0",
     "enzyme": "3.11.0",
@@ -66,7 +73,9 @@
     "serverless-domain-manager": "^4.1.1",
     "serverless-dotenv-plugin": "^2.4.2",
     "serverless-plugin-tracing": "^2.0.0",
-    "serverless-webpack": "^5.3.2"
+    "serverless-webpack": "^5.3.2",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.3"
   },
   "husky": {
     "hooks": {
