--- a/package.json
+++ b/package.json
@@ -55,9 +55,11 @@
     "@types/koa": "^2.11.3",
     "@types/koa-router": "^7.4.1",
     "@types/koa-session": "^5.10.2",
+    "@types/next": "^9.0.0",
     "@types/node": "^14.0.9",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@zeit/next-typescript": "^1.1.1",
     "babel-jest": "25.2.4",
     "babel-register": "^6.26.0",
     "enzyme": "3.11.0",
