--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "jest",
     "dev": "NODE_ENV=development nodemon",
     "build": "next build && babel server --out-dir dist --presets @babel/preset-env --ignore node_modules",
+    "deploy": "npm run build && sls deploy",
     "start": "NODE_ENV=production ts-node ./server/index.ts"
   },
   "repository": {
@@ -40,7 +41,7 @@
     "koa": "^2.8.2",
     "koa-router": "^8.0.6",
     "koa-session": "^5.13.1",
-    "next": "^8.1.0",
+    "next": "^9.4.4",
     "next-env": "^1.1.0",
     "react": "^16.10.1",
     "react-apollo": "^3.1.3",
@@ -59,7 +60,6 @@
     "@types/node": "^14.0.9",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "@zeit/next-typescript": "^1.1.1",
     "babel-jest": "25.2.4",
     "babel-register": "^6.26.0",
     "enzyme": "3.11.0",
