--- a/serverless.yml
+++ b/serverless.yml
@@ -54,6 +54,7 @@ functions:
           caching:
             enabled: true
     package:
+      individually: true
       exclude:
         - .git/**
 
